grammar.js
        source_file: ($) => repeat($._module),

        // Can statement-ise anything so we'll use this as top-level.
        // _statement: ($) => choice($._expression_statement, $._declaration_statement),
        // _expression_statement: ($) => seq($._expression, ';'),
        _module: ($) => choice($._top_level_item),

        // Noirc: Module -- Since doc comments can appear anywhere, Module is Item which is ItemKind.
        visibility_modifier: $ => seq('pub', optional('(crate)')),
        
        // [[file:noir_grammar.org::visibility]]
        global_item: $ => seq(
            optional($.visibility_modifier),
            repeat(choice($.mutable_modifier, $.comptime_modifier)),
            'global',
            field('name', $.identifier),
            field('type', optional($._type_annotation)), // Inlined Noirc: OptionalTypeAnnotation.,
            '=',
            $._expression,
            ';',
        ),
        // TODO: TypeAlias
        
        // [[file:noir_grammar.org::function]]
        function_item: $ => seq(
            optional($.visibility_modifier),
            repeat(choice($.comptime_modifier, $.unconstrained_modifier)),
            'fn',
            field('name', $.identifier),
            field('type_parameters', optional($._generic_parameters)),
            field('parameters', $.function_parameters),
            optional(seq('->', optional($.visibility), $._type)),
            optional($.where_clause),
            // No optional body allowed at this locus.
            field('body', $.block),
        ),
        // [[file:noir_grammar.org::function_parameters]]
        _statement: $ => seq(
            // TODO: Attributes.
            choice(
                // Inlined Noirc: StatementKind.
                $.break_statement,
                $.continue_statement,
                $.return_statement,
                $.let_statement,
                $.constrain_statement,
                $.comptime_statement,
                $.for_statement,
                $.if_expression,
                $.block,
                $.assign_statement,
                $.expression_statement,
            ),
        ),
        
        // [[file:noir_grammar.org::break_statement]]
        let_statement: $ => seq(
            'let',
            optional($.mut_bound),
            field('pattern', $._pattern),
            field('type', optional($._type_annotation)), // Inlined Noirc: OptionalTypeAnnotation.,
            '=',
            field('value', $._expression),
            ';',
        ),
        // [[file:noir_grammar.org::constrain_statement]]
        _expression: $ => prec(1, choice(
            $.binary_expression,
            // Inlined Noirc: Atom.
            $.__literal,
              // Inlined Noirc: ParenthesesExpression.
              alias($.unit_type, $.unit_expression),
              $.parenthesized_expression,
              $.tuple_expression,
            $.unsafe_block,
              // Inlined Noirc: PathExpression.
              $.path, // Inlined Noirc: VariableExpression.
              $.struct_expression,
            $.if_expression,
            $.lambda,
            // ---/ End: Atom.
            // TODO: SURELY identifier is allowed in expression, where's the concrete evidence though? Assuming it is for now.
            $.identifier,
        )),
        
        // [[file:noir_grammar.org::binary_expression]]
        binary_expression: $ => {
            const t = [
                // Highest to lowest.
                [PRECEDENCE.multiplicitive, choice('*', '/', '%',)],
                [PRECEDENCE.additive, choice('+', '-')],
                [PRECEDENCE.bitshift, choice('<<', '>>')],
                [PRECEDENCE.comparative, choice('<', '<=', '>', '>=')],
                [PRECEDENCE.bitxor, '^'],
                [PRECEDENCE.bitand, '&'],
                [PRECEDENCE.or, '|'],
                [PRECEDENCE.equality, choice('==', '!=')],
            ]
        
            return choice(...t.map(([p, o]) => prec.left(p, seq(
                field('left', $._expression),
                field('operator', o),
                field('right', $._expression),
            ))))
        },
        
        // [[file:noir_grammar.org::quote_expression]]
        block: $ => seq(
            '{',
            repeat($._statement),
            optional($._expression),
            '}',
        ),
        
        // [[file:noir_grammar.org::arguments]]
        lambda: $ => seq(
            field('parameters', $.lambda_parameters),
            field('return_type', optional($.lambda_return_type)),
            field('body', $._expression),
        ),
        // [[file:noir_grammar.org::lambda_return_type]]
        lambda_parameters: $ => seq(
            '|',
            optional(seq(
                sepBy1(choice(
                    $._pattern,
                    alias($.lambda_parameter, $.parameter),
                ), ','),
                optional(','),
            )),
            '|',
        ),
        // [[file:noir_grammar.org::lambda_parameter]]
        _type: $ => choice(
            $.primitive_type,
            $._parentheses_type,
            // $.array_or_slice_type,
            // $.mutable_reference_type,
            // $.function_type,
            // TODO: TraitAsType, AsTraitPathType, UnresolvedNamedType
            $.identifier_or_path_no_turbofish,
        ),
        
        // [[file:noir_grammar.org::type_annotation]]
        _type_annotation: $ => seq(':', $._type),
        
        // [[file:noir_grammar.org::primitive_type]]
        primitive_type: $ => choice(
            $.__field_type,
            $.__integer_type,
            $.__bool_type,
            $.__string_type,
            $.__format_string_type,
        ),
        // [[file:noir_grammar.org::field_type]]
        __field_type: _ => 'Field',
        // [[file:noir_grammar.org::int_type]]
        __integer_type: _ => choice(...INTEGER_TYPES),
        // [[file:noir_grammar.org::bool_type]]
        __bool_type: _ => 'bool',
        // [[file:noir_grammar.org::str_type]]
        __string_type: $ => seq(
            'str',
            '<',
            // TODO: TypeExpression goes here.
            '>',
        ),
        // [[file:noir_grammar.org::fmt_str_type]]
        __format_string_type: _ => 'fmtstr',
        
        // [[file:noir_grammar.org::parentheses_type]]
        tuple_type: $ => seq(
            '(',
            sepBy1($._type, ','),
            optional(','),
            ')',
        ),
        
        // [[file:noir_grammar.org::generics]]
        constrained_type: $ => $.tmp__let_to_type,
        
        // [[file:noir_grammar.org::generic_type]]
        generic: $ => seq(
            field('trait', $.identifier_or_path_no_turbofish),
            field('type_parameters', $._generic_type_parameters),
        ),
        
        // [[file:noir_grammar.org::generic_type_args]]
        _pattern: $ => seq(
            // alias(seq($.mut_bound, $._pattern_no_mut), $.mut_pattern),
            // optional($.mut_bound),
            $._pattern_no_mut,
        ),
        // [[file:noir_grammar.org::pattern_no_mut]]
        tuple_pattern: $ => seq(
            '(',
            sepBy($._pattern, ','), // Inlined Noirc: PatternList.
            optional(','),
            ')',
        ),
        
        // [[file:noir_grammar.org::struct_pattern]]
        struct_pattern: $ => seq(
            // TODO: Path
            '{',
            sepBy($.struct_pattern_field, ','), // Inlined Noirc: StructPatternFields.
            optional(','),
            '}',
        ),
        // [[file:noir_grammar.org::struct_pattern_field]]
        struct_pattern_field: $ => seq(
            $.identifier,
            optional(seq(':', $._pattern)),
        ),

        // * * * * * * * * * * * * * * * * * * * * * * * * * TEMPLATES / MISC
        
        // Alias both Generic and GenericType parameters to a node of the same name.
        
        // [[file:noir_grammar.org::generic_parameters]]
        _generic_parameters: $ => alias($._generics, $.type_parameters),
        // [[file:noir_grammar.org::generic_type_parameters]]
        _generic_type_parameters: $ => alias($._generic_type_args, $.type_parameters),
        
        // [[file:noir_grammar.org::tmp__let_to_type]]
        bool_literal: _ => choice('true', 'false'),
        
        // [[file:noir_grammar.org::int]]
        int_literal: _ => token(seq(
            choice(
                /[0-9][0-9_]*/,
                /0x[0-9a-fA-F_]+/,
            )
        )),
        
        // [[file:noir_grammar.org::str]]
        str_literal: $ => seq(
            '"',
            repeat(choice(
                $.str_content,
                $.escape_sequence,
                // $.str_content,
                // $.escape_sequence,
            )),
            token.immediate('"'),
        ),
        // [[file:noir_grammar.org::str_content]]
        str_content: _ => /[\x20-\x21\x23-\x5B\x5D-\x7E\s]+/,
        // [[file:noir_grammar.org::escape_sequence]]
        escape_sequence: $ => seq(
            '\\',
            // TODO: Do we want to be strict on valid escape sequences (r, n, t etc) or accept any ASCII. Problem is error recovery in tree-sitter and how that affects highlighting.
            token.immediate(choice(
                'r', 'n', 't', '0', '"', '\\',
            )),
        ),
        
        // [[file:noir_grammar.org::raw_str]]
        raw_str_literal: $ => seq(
            $._raw_str_literal_start,
            alias($._raw_str_literal_content, $.str_content),
            $._raw_str_literal_end,
        ),
        
        // [[file:noir_grammar.org::fmt_str]]
        fmt_str_literal: $ => seq(
            'f"',
            repeat(alias($.fmt_str_content, $.str_content)),
            token.immediate('"'),
        ),
        // [[file:noir_grammar.org::fmt_str_content]]
        __line_comment_doc_style: $ => choice(
            alias($.__inner_line_comment_doc_style, $.inner_doc_style),
            alias($.__outer_line_comment_doc_style, $.outer_doc_style),
        ),
        // [[file:noir_grammar.org::line_comment]]
        line_comment: $ => seq(
            '//',
            choice(
                // Four forward-slashes is still a normal line comment, not an outer-style.
                seq(token.immediate(prec(2, '//')), /.*/),
                seq(
                    field('style', $.__line_comment_doc_style),
                    field('content', alias(/.*/, $.doc_comment)),
                ),
                /.*/,
            ),
        ),
        
        // [[file:noir_grammar.org::block_comment__doc_style]]
        __block_comment_doc_style: $ => choice(
            alias($.__inner_block_comment_doc_style, $.inner_doc_style),
            alias($.__outer_block_comment_doc_style, $.outer_doc_style),
        ),
        // [[file:noir_grammar.org::block_comment]]
        block_comment: $ => seq(
            '/*',
            optional(
                choice(
                    // Block comments with doc style (see external parser).
                    seq(
                        field('style', $.__block_comment_doc_style),
                        optional(field('content', alias($._block_comment_content, $.doc_comment))),
                    ),
                    // Normal block comments (see external parser).
                    $._block_comment_content,
                ),
            ),
            '*/',
        ),
        
        // [[file:noir_grammar.org::path]]
        path: $ => seq(
            field('scope', choice(
                $.path,
                $.identifier,
                $.__path_kind,
            )),
            '::',
            choice(
                field('type_parameters', $._generic_type_parameters),
                field('name', $.identifier),
            ),
        ),
        // [[file:noir_grammar.org::identifier_or_path]]
        __path_kind: $ => choice($.crate, $.dep, $.super),
        
        // [[file:noir_grammar.org::identifier]]
        identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
        
        // Modifiers except for visibility (in order).
        
        // [[file:noir_grammar.org::modifier_mut]]
        mutable_modifier: _ => 'mut',
        // [[file:noir_grammar.org::modifier_comptime]]
