test/corpus/extras.txt
=============================
Comments / Line / No docStyle
=============================

// Foobar
// Lorem
//Whitespace at comment glue-tokens doesn't matter
// Comments cannot be nested // So this line // Is a single comment // Not four
//// Four slashes is also a normal line comment!
//
//             Big leading whitespace

// !Not a doc comment because there's a space between the // and !

// Lone

// Wolf

---

(source_file
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
)


================================
Comments / Line / Inner docStyle
================================

//! Foobar inner line doc comment
//!No whitespace at glue-token
//! No nested //! Line doc /// Comments // Or normal
//!         Big leading
//!

//! Lone

//!         ~~~~~~Wolf~~~~~~!**!#$%#!^&@%$!#(!#^!@&(!@*&@!)) (lots of ascii spam)

---

(source_file
  (line_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (line_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (line_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (line_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (line_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (line_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (line_comment
    style: (inner_doc_style)
    content: (doc_comment))
)


================================
Comments / Line / Outer docStyle
================================

/// Foobar outer line doc comment
///No whitespace at glue-token
/// No nested /// Line doc //! Comments // Or normal
///         Big leading
///

/// Lone

///         ~~~~~~Wolf~~~~~~!**!#$%#!^&@%$!#(!#^!@&(!@*&@!)) (lots of ascii spam)

---

(source_file
  (line_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (line_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (line_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (line_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (line_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (line_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (line_comment
    style: (outer_doc_style)
    content: (doc_comment))
)


==============================
Comments / Block / No docStyle
==============================

/* single line block comment */

/*whitespace doesn't matter*/

/*                big        padding           */

/* multi line
block comment */

/* lots of ** asterisks * */

/**/

---

(source_file
  (block_comment)
  (block_comment)
  (block_comment)
  (block_comment)
  (block_comment)
  (block_comment)
)


===========================================
Comments / Block / No docStyle / Degenerate
===========================================

/***/

/****/

/* n *//***/

/*         ~~~~~~Wolf~~~~~~!**!#$%#!^&@%$!#(!#^!@&(!@*&@!)) (lots of ascii spam)
//! lorem
// foo
/// bar
*/

---

(source_file
  (block_comment)

  (block_comment)

  (block_comment)
  (block_comment)
  (block_comment)
)


=======================================
Comments / Block / No docStyle / Nested
=======================================

/* single line /* nested /* block */ comment */ */

/* no nesting kids /** */ /**/ /***/ /*!*/ /*! */ */

---

(source_file
  (block_comment)
  (block_comment)
)


===============================================
Comments / Block / No docStyle / Unmatched (e1)
:error
===============================================

/* unmatched single line
---


===============================================
Comments / Block / No docStyle / Unmatched (e2)
:error
===============================================

/* unmatched /* nested comment */
---


===============================================
Comments / Block / No docStyle / Unmatched (e3)
:error
===============================================

/* unmatched /*
multiline /* nested
comment */ */
---


=================================
Comments / Block / Inner docStyle
=================================

/*! single */

/*!whitespace doesn't matter*/

/*!    big   padding    */

/*! single /*! nested /* block */ comment */ */

/*! multi line
block comment */

/*! lots of ** asterisks * */

/*! no nesting kids /** */ /**/ /***/ /*!*/ /*! */ */

/*!!*/

/*!         ~~~~~~Wolf~~~~~~!**!#$%#!^&@%$!#(!#^!@&(!@*&@!)) (lots of ascii spam)
//! nope
// foo
/// bar
*/

---

(source_file
  (block_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (block_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (block_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (block_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (block_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (block_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (block_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (block_comment
    style: (inner_doc_style)
    content: (doc_comment))
  (block_comment
    style: (inner_doc_style)
    content: (doc_comment))
)


=========================================
Comments / Block / Inner docStyle / Empty
=========================================

/*!*/

---

(source_file
  (block_comment
    style: (inner_doc_style))
)


=================================
Comments / Block / Outer docStyle
=================================

/** single */

/**whitespace doesn't matter*/

/**    big   padding    */

/** single /** nested /* block */ comment */ */

/** multi line
block comment */

/** lots of ** asterisks * */

/** no nesting kids /** */ /**/ /***/ /*!*/ /*! */ */

/**         ~~~~~~Wolf~~~~~~!**!#$%#!^&@%$!#(!#^!@&(!@*&@!)) (lots of ascii spam)
//! nope
// foo
/// bar
*/

---

(source_file
  (block_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (block_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (block_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (block_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (block_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (block_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (block_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (block_comment
    style: (outer_doc_style)
    content: (doc_comment))
)


===========================================
Comments / Block / Outer docStyle / Minimal
===========================================

/** */
/**x*/
/**!*/

---

(source_file
  (block_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (block_comment
    style: (outer_doc_style)
    content: (doc_comment))
  (block_comment
    style: (outer_doc_style)
    content: (doc_comment))
)
